--- a/page.html
+++ b/page.html
@@ -10,6 +10,7 @@
     <canvas id="courseCanvas"></canvas>
   </div>
   <script type="text/javascript" src="courses.js"></script>
+  <script type="text/javascript" src="settings.js"></script>
   <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
