some proof reading done and abstract text

--- a/page.html
+++ b/page.html
@@ -6,9 +6,14 @@
 </head>
 
 <body>
-  <div id="courses-container">
-    <canvas id="courseCanvas"></canvas>
-  </div>
+  <section>
+    <div id="courses-abstract">
+      Grafen nedan beskriver de tre första åren på D-programmet så som de är strukturerade enligt <a href="http://lith.liu.se/sh/civing/lot_d.html">studiehandboken</a> med en förklarande text till varför just den kursen ingår i utbildningen (håll musen över noderna) och vilka moment som är viktiga i påbyggnadskurser. Det är viktigt att påpeka att moment som inte nämns specifikt också är viktiga och bör ges sin beskurna del i utbildningen. Kurserna är indelade i färger för att visa vilket område de tillhör: Brunt är matematik, gult är elektroteknik, grönt är mjukvara, rosa fysik och blått ingenjörsprofessionalism.
+    </div>
+    <div id="courses-container">
+      <canvas id="courseCanvas"></canvas>
+    </div>
+  <section>
   <script type="text/javascript" src="courses.js"></script>
   <script type="text/javascript" src="settings.js"></script>
   <script type="text/javascript" src="main.js"></script>
